# hello-ffi

./: .gitignore  Cargo.toml  LICENSE  Makefile  build.rs  example.c
c/: .gitignore  Makefile  README.md  cbindgen.toml  example.c
derive/: Cargo.toml
derive/src/: lib.rs
derive/src/langs/: c.rs  common_mapping.rs  mod.rs  python.rs
derive/src/types/: function.rs  mod.rs  module.rs  structure.rs  tr.rs
hello/: Cargo.toml
hello/src/: lib.rs
python/: .gitignore  MANIFEST.in  README.md  example.py  setup.py
python/bdk/: __init__.py
src/: bdk_mod.rs  bitcoin_mod.rs  common.rs  error.rs  lib.rs  mapping.rs
src/langs/: c.rs  mod.rs  python.rs
