[package]
name = "bdk-ffi"
version = "0.4.0"
authors = ["Alekos Filini <alekos.filini@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
bdk = "0.5"
derive = { path = "./derive", features = ["debug"] }
libc = { version = "0.2", optional = true}
pyo3 = { version = "0.13", features = ["extension-module"], optional = true }

[build-dependencies]
cbindgen = { version = "0.17", optional = true }

[features]
c = ["libc", "cbindgen", "derive/c"]
python = ["pyo3", "derive/python"]

# [workspace]
# members = ["derive"]
